css/style.css
html,body {
    height:100%;
    background-size: cover;
}

.icon-bar {
    background-color:#fff;
}
.rowbtn{
    display:block;
}
@media screen and (max-width: 500px){
    .media-left {
        display:block;
    }
}
.thumbnail{
    width:200px;
}
.socialRow {
    margin-bottom:20px;
}
/*
.navbar-trans {
    background-color:#279ddd;
    color:#fff;
}

.navbar-trans li>a:hover,.navbar-trans li>a:focus,.navbar-trans li.active {
    background-color:#38afef;
}

.navbar-trans a{
    color:#fefefe;
}

.navbar-trans .form-control:focus {
    border-color: #eee;
    outline: 0;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(100,100,100,0.6);
    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(100,100,100,0.6);
}
*/
section {
    padding-top:70px;
    padding-bottom:50px;
    min-height:calc(100% - 1px);
}

.v-center {
    padding-top:50%;
    font-size:70px;
}

.well {
    border-color:transparent;
}

footer {
    background-color:#494949;
    color:#ddd;
    min-height:100px;
    padding-top:20px;
    padding-bottom:40px;
}

footer .nav>li>a {
    padding:3px;
    color:#ccc;
}

footer .nav>li>a:hover {
    background-color:transparent;
    color:#fff;
}



/*** begin sharrre ***/
.sharrre .box{
    float:left;
}
.sharrre .count {
    color:#444444;
    display:block;
    font-size:17px;
    line-height:34px;
    height:34px;
    padding:4px 0;
    position:relative;
    text-align:center;
    text-decoration:none;
    width:50px;
    background-color:#eee;
    -webkit-border-radius:4px;
    -moz-border-radius:4px;
    border-radius:4px;
}
.sharrre .share {
    color:#FFFFFF;
    display:block;
    font-size:11px;
    height:16px;
    line-height:16px;
    margin-top:3px;
    padding:0;
    text-align:center;
    text-decoration:none;
    width:50px;
    background-color:#9CCE39;
    -webkit-border-radius:4px;
    -moz-border-radius:4px;
    border-radius:4px;
}
.sharrre .buttons {
    display:none;
    position:absolute;
    margin-left:50px;
    z-index:10;
    background-color:#fff;
}
.sharrre .button {
    float:left;
    max-width:50px;
    margin-left:10px;
}
/*** end sharrre ***/

